# Decentralized-Federtaed-Learning

./: CMakeLists.txt  README.md  federated_learning.cpp  inputf.txt
